<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDarkColor"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/top_image_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:src="@drawable/top_background" />

    <ImageView
        android:id="@+id/logo_image_view"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/logo"
        tools:src="@drawable/logo" />


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/logo_image_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="-75dp"
        android:fontFamily="@font/poppins_med"
        android:text="@string/app_name"
        android:textColor="@color/textColor"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/small_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="-28dp"
        android:fontFamily="@font/poppins_med"
        android:text="@string/small_title"
        android:textColor="@color/textColor"
        android:textSize="14sp" />


    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_streaming_example"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/main_button_background"
            android:drawableEnd="@drawable/ic_play"
            android:drawablePadding="-30dp"
            android:fontFamily="@font/poppins_med"
            android:paddingRight="30dp"
            android:text="@string/btn_streaming_example"
            android:textColor="#fff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_downloading_example"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/main_button_background"
            android:drawableEnd="@drawable/ic_download"
            android:drawablePadding="-30dp"
            android:fontFamily="@font/poppins_med"
            android:paddingRight="30dp"
            android:text="@string/btn_downloading_example"
            android:textColor="#fff"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/main_button_background"
            android:text="@string/btn_update"
            android:textColor="@color/textColor"
            android:textSize="16sp" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:elevation="10dp"
            android:visibility="gone" />
    </LinearLayout>

    <!--    <Button-->
    <!--        android:id="@+id/btn_command_example"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_marginTop="40dp"-->
    <!--        android:text="@string/btn_command_example"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toBottomOf="@+id/btn_downloading_example" />-->

    <TextView
        android:id="@+id/copyright_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins_med"
        android:text="@string/copyright"
        android:textColor="@color/textColorSecondary"
        android:textSize="12sp" />

</RelativeLayout>